--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,9 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.86"
+bitflags = "2.6.0"
 bitstream-io = "2.5.0"
+crc = "3.2.1"
 env_logger = "0.11.5"
 log = "0.4.22"
 snap = "1.1.1"
