--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = "1.0.86"
 bitflags = "2.6.0"
 bitstream-io = "2.5.0"
 crc = "3.2.1"
+dashmap = "6.0.1"
 snap = "1.1.1"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
