--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ bitflags = "2.6.0"
 bitstream-io = "2.5.0"
 crc = "3.2.1"
 num_enum = "0.7.3"
+serde = { version = "1.0.210", features = ["derive"] }
+serde_json = "1.0.128"
 snap = "1.1.1"
 tokio = { version = "1.40.0", features = ["full"] }
 tokio-util = { version = "0.7.12", features = ["full"] }
