--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.86"
+argh = "0.1.12"
 bitflags = "2.6.0"
 bitstream-io = "2.5.0"
 crc = "3.2.1"
@@ -14,5 +15,6 @@ serde_json = "1.0.128"
 snap = "1.1.1"
 tokio = { version = "1.40.0", features = ["full"] }
 tokio-util = { version = "0.7.12", features = ["full"] }
+toml = "0.8.19"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
