--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ num_enum = "0.7.3"
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
 snap = "1.1.1"
+strum = { version = "0.26.3", features = ["derive"] }
 thiserror = "1.0.66"
 tokio = { version = "1.40.0", features = ["full"] }
 tokio-util = { version = "0.7.12", features = ["full"] }
