more tests (WIP)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,11 @@ name = "server"
 version = "0.1.0"
 edition = "2021"
 
+[profile.dev]
+panic = "abort"
+[profile.release]
+panic = "abort"
+
 [dependencies]
 anyhow = "1.0.86"
 argh = "0.1.12"
